--- a/app-reactgaming/src/components/css/header.css
+++ b/app-reactgaming/src/components/css/header.css
@@ -1,23 +1,6 @@
-.game-item {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 20px;
-    text-align: center;
-    background-color: #f9f9f9;
-  }
-  
-  .game-item img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-  }
-  
-  .game-item ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .game-item li {
-    margin-bottom: 5px;
-  }
-  
+header {
+  text-align: center;
+  padding: 20px;
+  background-color: #1e88e5;
+  color: white;
+}
