--- a/app-reactgaming/src/components/css/navigation.css
+++ b/app-reactgaming/src/components/css/navigation.css
@@ -1,22 +1,27 @@
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 15px;
-    background-color: #222;
-    color: white;
-  }
-  
-  .nav-links {
-    list-style: none;
-    display: flex;
-  }
-  
-  .nav-links li {
-    margin-right: 15px;
-  }
-  
-  .nav-links a {
-    text-decoration: none;
-    color: white;
-  }
-  
+nav {
+  background-color: #1565c0;
+  padding: 10px;
+  text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 0 15px;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-bottom:2px solid transparent;
+}
+
+nav ul li a:hover {
+  border-bottom:2px solid white;
+}
