ready to deploy

--- a/app-reactgaming/src/pages/css/dashboard.css
+++ b/app-reactgaming/src/pages/css/dashboard.css
@@ -7,6 +7,15 @@
     width:100%;
 }
 
+ul {
+    list-style: none;
+}
+
+.button-group {
+    display: flex;
+    gap: 10px;
+}
+
 .dashboard-container {
     display: flex;
     flex-wrap:wrap;
