--- a/app-reactgaming/src/pages/css/reviewspage.css
+++ b/app-reactgaming/src/pages/css/reviewspage.css
@@ -25,6 +25,15 @@
     font-weight: bold;
 }
 
+.review img {
+    width: 100%;
+    height: 180px; 
+    object-fit: contain; 
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+}
+
 .review a:hover {
     text-decoration: underline;
 }
@@ -68,5 +77,16 @@
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.reviews-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, auto); 
+    gap: 20px; 
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
