--- a/app-reactgaming/src/pages/css/dashboard.css
+++ b/app-reactgaming/src/pages/css/dashboard.css
@@ -1,6 +1,6 @@
 /* <!--userdashboard--> */
 .secondary-nav {
-    background-color: #0d47a1;
+    background-color: #1565c0;
     padding: 10px;
     text-align: center;
     margin-bottom: 20px;
