--- a/app-reactgaming/src/components/css/header.css
+++ b/app-reactgaming/src/components/css/header.css
@@ -4,3 +4,100 @@ header {
   background-color: #1e88e5;
   color: white;
 }
+
+#toggle-nav {
+  width: 30px;
+  height: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+#toggle-nav div {
+  width:25px;
+  height:2px;
+  background:white;
+  margin:6px 0;
+}
+
+.nav-items {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+}
+
+.hidden {
+  display:none;
+}
+
+@media (min-width: 900px) {
+  #nav-items {
+      display:flex !important;
+      flex-direction: row; 
+      align-items: center; 
+      background: #1565c0;
+      top: 50px;
+      left: 0;
+      padding: 10px;
+  }
+
+  #secondary-nav {
+      display:flex;
+      flex-direction: column; 
+      align-items: center; 
+      background: white;
+      top: 50px;
+      left: 0;
+      width: 100%;
+      padding: 10px;
+  }
+
+  #nav-items li {
+      flex:1;
+  }
+
+  #toggle-nav {
+      display:none; 
+  }
+}
+
+@media (max-width: 768px) {
+  #nav, #secondary-nav {
+      display: flex !important;
+      flex-direction: column;
+      align-items: left;
+      width: 100%;
+  }
+
+  #nav-items {
+      display:none;
+      flex-direction: column;
+      width: 100%;
+      text-align: left;
+  }
+
+  #nav-items.hidden {
+      display:flex;
+  }
+
+  #secondary-nav ul {
+      display:flex;
+      flex-direction:column;
+      width:100%;
+      text-align:left;
+  }
+
+  #nav-items li, #secondary-nav ul li {
+      width: 100%;
+      padding: 10px 0;
+  }
+
+  #toggle-nav {
+      display: block;
+      color: white;
+      padding: 10px;
+      text-align: left;
+      width: 100%;
+  }
+}
