--- a/app-reactgaming/src/pages/css/aboutcontact.css
+++ b/app-reactgaming/src/pages/css/aboutcontact.css
@@ -1,10 +1,70 @@
-.contact-section {
+.two-column-container {
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    margin: auto;
+    gap: 20px;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+}
+
+.about-section, .contact-content {
     flex: 1;
     min-width: 300px; 
     background: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.contact-content form {
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+.contact-content label {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.contact-content input,
+.contact-content select,
+.contact-content textarea {
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.contact-content button {
+    margin-top: 15px;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    width:100%;
+}
+
+.contact-content button:hover {
+    background-color: #555;
+}
+
+.map {
+    width: 100%;
+    height: 500px;
+    border: 0;
+    display: block;
+}
+
+#result {
+    margin-top: 10px;
+    font-weight: bold;
 }
 
 .faq {
