--- a/app-reactgaming/src/components/css/reviewlist.css
+++ b/app-reactgaming/src/components/css/reviewlist.css
@@ -16,9 +16,9 @@
     background: #0d47a1;
 }
 
-.review-grid {
+/* .review-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-}
+} */
