--- a/app-reactgaming/src/pages/css/home.css
+++ b/app-reactgaming/src/pages/css/home.css
@@ -28,8 +28,7 @@
 
 .grid-item img {
     width: 100%;
-    height: 200px;
-    object-fit:contain;
+    max-height: 200px;
     border-radius: 5px;
 }
 
